# lattice-zksnark

lwe/: CMakeLists.txt
lwe/container/: ring_base.hpp
lwe/snark/: proof.cu  r1cs_lattice_snark.hpp
lwe/tests/: circ_lattice_params.hpp  common.hpp
lwe/tests/SNARK/: test_r1cs_lattice_snark_p28.cpp
